--- a/services/payments/docker-compose.yaml
+++ b/services/payments/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     environment:
       - HOST=${HOST}
       - PORT=${PAYMENTS_SERVICE_PORT}
+      - TEST_DEPLOYMENT=${TEST_DEPLOYMENT}
       - RABBITMQ_HOST=rabbitmq
       - RABBITMQ_USER=${RABBITMQ_USER}
       - RABBITMQ_PASS=${RABBITMQ_PASS}
