--- a/docs/openAPI/openapi/events.yaml
+++ b/docs/openAPI/openapi/events.yaml
@@ -371,7 +371,7 @@ paths:
           required: false
           schema:
             type: string
-            enum: [date, title, instant]
+            enum: [date, title, instant, price]
             default: date
           example: title
         - name: sortOrder
