chore(seed): add seed for follow in notification and price in events

--- a/infrastructure/seed/docker-compose.yaml
+++ b/infrastructure/seed/docker-compose.yaml
@@ -13,12 +13,13 @@ services:
       - INTERACTIONS_HOST=http://interactions:${INTERACTIONS_SERVICE_PORT}
       - CHAT_HOST=http://chat:${CHAT_SERVICE_PORT}
       - PAYMENTS_HOST=http://payments:${PAYMENTS_SERVICE_PORT}
+      - NOTIFICATIONS_HOST=http://notifications:${NOTIFICATIONS_SERVICE_PORT}
       - MONGO_DB=eventonight
       - EVENT_MONGO_URI=${COMPOSE_PROJECT_NAME}-mongo-events-1
       - INTERACTION_MONGO_URI=${COMPOSE_PROJECT_NAME}-mongo-interactions-1
       - CHAT_MONGO_URI=${COMPOSE_PROJECT_NAME}-mongo-chat-1
       - PAYMENT_MONGO_URI=${COMPOSE_PROJECT_NAME}-mongo-payments-1
-
+      - NOTIFICATION_MONGO_URI=${COMPOSE_PROJECT_NAME}-mongo-notifications-1
 networks:
   eventonight-network:
     driver: bridge
