--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -46,6 +46,7 @@
     "esbuild": "0.25.11",
     "eslint": "^9.37.0",
     "eslint-plugin-vue": "^10.5.0",
+    "eslint-plugin-vuejs-accessibility": "^2.4.1",
     "globals": "^16.4.0",
     "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
