chore(a11y): setup lighthouse automatic check

--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -11,15 +11,17 @@
     "dev": "vite",
     "dev-prod": "VITE_USE_MOCK_API=false VITE_HOST=localhost vite",
     "dev:memberView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=member_1@example.com VITE_DEV_PASSWORD=password123 VITE_DEV_ROLE=member npm run dev",
-    "dev:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=organization_1@example.com VITE_DEV_PASSWORD=password123 VITE_DEV_ROLE=organization npm run dev",
+    "dev:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=contact@sunsetvibes.com VITE_DEV_PASSWORD=sunsetCesena2026! VITE_DEV_ROLE=organization npm run dev",
     "dev-prod:memberView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=member_1@example.com VITE_DEV_PASSWORD=password123 VITE_DEV_ROLE=member npm run dev-prod",
-    "dev-prod:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=organization_1@example.com VITE_DEV_PASSWORD=password123 VITE_DEV_ROLE=organization npm run dev-prod",
+    "dev-prod:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=contact@sunsetvibes.com VITE_DEV_PASSWORD=sunsetCesena2026! VITE_DEV_ROLE=organization npm run dev-prod",
+    "dev-prod-a11y": "VITE_TEST_A11Y=true npm run dev-prod:organizationView",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build && node scripts/generate-locale-html.js",
     "type-check": "vue-tsc --build",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "a11y:multi": "node scripts/a11y-check-multi.js"
   },
   "dependencies": {
     "@quasar/extras": "^1.17.0",
@@ -43,15 +45,16 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
+    "chrome-launcher": "^1.2.1",
     "esbuild": "0.25.11",
     "eslint": "^9.37.0",
     "eslint-plugin-vue": "^10.5.0",
     "eslint-plugin-vuejs-accessibility": "^2.4.1",
     "globals": "^16.4.0",
     "jiti": "^2.6.1",
+    "lighthouse": "^13.0.1",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.6.2",
-    "prettier-eslint": "^1.0.1",
     "sass": "^1.94.0",
     "sass-embedded": "^1.93.3",
     "typescript": "~5.9.0",
