chore(i18n): update translation

--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -14,7 +14,8 @@
     "dev:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=contact@sunsetvibes.com VITE_DEV_PASSWORD=sunsetCesena2026! VITE_DEV_ROLE=organization npm run dev",
     "dev-prod:memberView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=member_1@example.com VITE_DEV_PASSWORD=password123 VITE_DEV_ROLE=member npm run dev-prod",
     "dev-prod:organizationView": "VITE_AUTO_LOGIN=true VITE_DEV_EMAIL=contact@sunsetvibes.com VITE_DEV_PASSWORD=sunsetCesena2026! VITE_DEV_ROLE=organization npm run dev-prod",
-    "dev-prod-a11y": "NODE_ENV=production VITE_TEST_A11Y=true npm run dev-prod:organizationView",
+    "prod-a11y": "NODE_ENV=production VITE_TEST_A11Y=true npm run dev-prod:organizationView",
+    "prod": "NODE_ENV=production npm run dev-prod",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build && node scripts/generate-locale-html.js",
