ci(refactor): update test and build workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,7 +2,7 @@ name: Build and Test
 
 on:
   push:
-    branches: [ main, feature/**, ci/**]
+    branches: [ main, feature/**, ci/**, refactor/** ]
   pull_request:
 
 jobs:
