--- a/services/interactions/docker-compose.yaml
+++ b/services/interactions/docker-compose.yaml
@@ -29,14 +29,33 @@ services:
   mongo-interactions:
     image: mongo
     restart: unless-stopped
+    command: ["--replSet", "rs0", "--bind_ip_all"]
     networks:
       - interactions-network
     healthcheck:
-      test: [ 'CMD', 'mongosh', '--quiet', '--eval', 'db.runCommand({ ping: 1 }).ok' ]
-      interval: 2s
-      timeout: 3s
-      retries: 10
-      start_period: 30s
+      test: |
+        mongosh --quiet --eval "
+        try {
+          var status = rs.status();
+          if (status.ok === 1 && status.members && status.members[0].stateStr === 'PRIMARY') {
+            db.runCommand({ ping: 1 });
+          } else {
+            quit(1);
+          }
+        } catch(e) {
+          if (e.codeName === 'NotYetInitialized') {
+            rs.initiate({
+              _id: 'rs0',
+              members: [{ _id: 0, host: 'mongo-interactions:27017' }]
+            });
+          }
+          quit(1);
+        }
+        "
+      interval: 5s
+      timeout: 10s
+      retries: 20
+      start_period: 40s
 
 networks:
   eventonight-network:
