--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -46,6 +46,7 @@ jobs:
           cp -R ./docs/asyncAPI ${{ env.SITE }}/
           mkdir -p ${{ env.SITE }}/report
           cp ./docs/report/index.html ${{ env.SITE }}/report/index.html
+          cp ./docs/logo.png ${{ env.SITE }}/report/logo.png
       
       - name: Install dependencies for ASW Report
         run: npm install
@@ -54,7 +55,12 @@ jobs:
       - name: Build ASW Report with VitePress
         run: npm run docs:build -- --base /EvenToNight/report/ASW/ --outDir ../../../site/report/ASW
         working-directory: ./docs/report/ASW
-        
+
+      - name: Copy ASW PDF Report
+        run: |
+          mkdir -p ${{ env.SITE }}/report/ASW/latex
+          cp ./docs/report/ASW/latex/ASW-Report.pdf ${{ env.SITE }}/report/ASW/latex/ASW-Report.pdf
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
