refactor(libs): put other payments/commons file in libs

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ Thumbs.db
 # ----------------------
 # Node / VitePress
 # ----------------------
-node_modules/
+node_modules
 docs/node_modules/
 docs/.vitepress/cache/
 docs/.vitepress/dist/
