build(deploy): initial swarm setup

--- a/services/frontend/docker-compose.yaml
+++ b/services/frontend/docker-compose.yaml
@@ -10,6 +10,13 @@ services:
       - "traefik.http.services.frontend.loadbalancer.server.port=${FRONTEND_SERVICE_PORT}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_eventonight-network"
     restart: unless-stopped
+    deploy:
+      replicas: ${FRONTEND_SERVICE_REPLICAS:-1}
+      update_config:
+        parallelism: 1
+        delay: 10s
+        order: start-first
+        failure_action: rollback
     environment:
         - VITE_HOST=${HOST}
         - PORT=${FRONTEND_SERVICE_PORT}
