--- a/services/events/docker-compose.yaml
+++ b/services/events/docker-compose.yaml
@@ -26,6 +26,8 @@ services:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+      users:
+        condition: service_healthy
 
   mongo-events:
     image: mongo
