--- a/services/media/Dockerfile
+++ b/services/media/Dockerfile
@@ -3,7 +3,7 @@ RUN apk add --no-cache curl
 WORKDIR /app
 
 COPY ./services/media/package*.json ./
-RUN npm install
+RUN npm ci
 
 COPY ./services/media/src ./src
 COPY ./services/media/tsconfig.json ./
