--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:25-alpine3.22 AS builder
 WORKDIR /home/app
 
-COPY ./services/frontend/package.json ./
+COPY ./services/frontend/package*.json ./
 RUN apk add --no-cache git
-RUN npm install --include=dev
+RUN npm ci
 COPY ./services/frontend .
 
 ENV NODE_ENV=production
